# xammp

./: .env  .gitignore  Aegis-IA0003.h5  Aegis-IA0003.keras  Aegis-IA0003.keras_predictions.npy  Aegis-IA0003.keras_q_table.csv  Aegis-IA0003.keras_trade_log.npy  Dockerfile  README.md  aegisia_mvvm.json  bingx.py  current_symbol.txt  docker-compose.yml  kraken.py  kraken_futures_example.py  main.py  manual.py  pyproject.toml  q_table.csv  q_table_example_user_123.csv  requirements.txt  test.py  todo.todo  translations.json  utils.txt
app/: Aplicacion.py  __init__.py  config.py
app/iu/: routes.py
app/iu/routes/: __init__.py
app/iu/static/: index_dom.js
app/iu/templates/: base.html  home.html  (+9 more)
app/lib/: settings.py
app/models/: blocked_balance.py  create_db.py  performance_aegis.py  referral_earnings.py  referral_link.py  shared_models.py  strategies.py  trades.py  transaction_wallet.py  user_performance.py  users.py  wallet.py
docs/: get_started_project.md  integration_ia_kraken.md  workflows.md
instance/: your_database.db
json/: adapter_config.json
migrations/: 002_create_users_table.sql
migrations/versions/: 31634f498dfe_create_performanceuser_table.py
q_tables/: q_table_72ca4b7b-b726-4816-a1da-b0e06f94ee8f.csv  q_table_7cfdf62d-c114-4731-962d-ed6eb2a694f0.csv  q_table_8f5e9f98-ad75-465f-8b53-8505eb0364a8.csv  q_table_a911b5af-cd6d-4c67-922e-5a8cc9d139ee.csv  q_table_d08c0b8a-f7de-4bd0-bf1e-e336971aeac4.csv  q_table_example_user_123.csv
test/: run_test_bingx.py  run_test_kraken.py
training_data/: datos_entrenamiento.py  datos_entrenamiento.txt
(+98 files in other folders)
